# Doom05RE

./: .gitignore  CMakeLists.txt  readme.md
dossrc/: DOOM.LNK  DOOMSTUB.C  D_IBM_A.ASM  HMAPDEM.ASM  HMAPH.ASM  HMAPHC.ASM  HMAPL.ASM  IR_IBM.C  I_IBM.C  MAKEFILE  VMAPH.ASM  VMAPHC.ASM  VMAPL.ASM
portsrc/: d_demo.c  d_main.c  d_misc.c  doomdef.h  g_game.c  g_game.h  g_world.c  hmap_c.c  hmaphc_c.c  i_local.h  i_sdl.c  ir_sdl.c  m_menu.c  m_menu.h  p_actor.h  p_enemy.c  p_local.h  p_play.c  p_spec.c  p_spec.h  p_status.c  p_things.c  p_trace.c  p_user.c  r_data.h  r_game.c  r_init.c  r_lines.c  r_local.h  r_planes.c  r_sector.c  r_textur.c  r_things.c  s_sound.c  s_sound.h  sdl_gl.c  sdl_gl.h  states.c  states.h  v_munged.c  (+7 more)
src/: d_demo.c  d_main.c  d_misc.c  doomdata.h  doomdef.h  g_game.c  g_game.h  g_world.c  hmapc.c  hmaph.c  i_local.h  i_sdl.c  ir_sdl.c  m_menu.c  m_menu.h  p_enemy.c  p_local.h  p_play.c  p_play.h  p_spec.c  p_spec.h  p_status.c  p_things.c  p_trace.c  p_user.c  r_data.h  r_game.c  r_init.c  r_lines.c  r_local.h  r_planes.c  r_ref.h  r_sector.c  r_textur.c  r_things.c  s_sound.c  s_sound.h  sdl_gl.c  sdl_gl.h  sdl_key.h  (+12 more)
